--- a/.github/workflows/ExportNotebooks.yml
+++ b/.github/workflows/ExportNotebooks.yml
@@ -1,56 +1,59 @@
-name: Export & Deploy Notebooks
+name: Publish Pluto Notebooks to Pages
 on:
-    pull_request:
-    push:
-        branches:
-            - main
-    workflow_dispatch:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+# When two jobs run in parallel, cancel the older ones, to make sure that the
+# website is generated from the most recent commit.
+concurrency:
+  group: pluto-export
+  cancel-in-progress: true
 
 jobs:
-    build-and-deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2
-            - name: Set up notebook state cache
-              uses: actions/cache@v2
-              with:
-                path: pluto_state_cache
-                key: ${{ runner.os }}-pluto_state_cache-v2-${{ hashFiles('**/Project.toml', '**/Manifest.toml') }}-${{ hashFiles('**/*.jl') }}
-                restore-keys: |
-                    ${{ runner.os }}-pluto_state_cache-v2-${{ hashFiles('**/Project.toml', '**/Manifest.toml') }}
-            - name: Install Julia
-              uses: julia-actions/setup-julia@v1
-              with:
-                  version: 1.8
-            - name: Run Pluto notebooks and generate website
-                # Save create package environment from notebook
-                #   (write_nb_to_dir modifies changes the cell order 
-                #    if macros are involved hence we want to call it 
-                #    on a copy of the notebook)
-              shell: julia --color=yes --project=. {0} 
-              run: |
-                dir0 = pwd()
-                dir1 = joinpath(dir0, "generate")
-                cd(dir1)
-                run(`cp generate.jl generate2.jl`)
-                import Pkg
-                Pkg.add(Pkg.PackageSpec(name="Pluto", version="0.18"))
-                import Pluto
-                Pluto.activate_notebook_environment(joinpath(dir1, "generate2.jl"))
-                Pkg.instantiate()
-                include(joinpath(dir1, "generate.jl"))
-              
-            - name: Upload artifacts
-              uses: actions/upload-artifact@v2
-              with:
-                  name: website
-                  path: ./website/__site
-                  
-            - name: Deploy to gh-pages
-              uses: JamesIves/github-pages-deploy-action@releases/v3
-              if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-              with:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  BRANCH: gh-pages
-                  FOLDER: ./website/__site
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout this repository
+        uses: actions/checkout@v3
+
+      - name: Install Julia
+        uses: julia-actions/setup-julia@latest
+        with:
+          version: "1.8"
+
+      - name: Cache Julia artifacts & such
+        uses: julia-actions/cache@v1
+        with:
+          cache-registries: "true"
+
+      # We set up a folder that Pluto can use to cache exported notebooks.
+      # If the notebook file did not change, then Pluto can take the exported
+      # file from cache instead of running the notebook.
+      - name: Set up notebook state cache
+        uses: actions/cache@v3
+        with:
+          path: pluto_state_cache
+          key: |
+            ${{ runner.os }}-pluto_state_cache-v2-${{ hashFiles('Project.toml', 'Manifest.toml', '.github/workflows/*' ) }}-${{ hashFiles('notebooks/*.*') }}
+          restore-keys: |
+            ${{ runner.os }}-pluto_state_cache-v2-${{ hashFiles('Project.toml', 'Manifest.toml', '.github/workflows/*' ) }}
+      - name: Run & export Pluto notebooks
+        run: |
+          julia -e 'using Pkg
+            Pkg.activate(mktempdir())
+            Pkg.add("PlutoSliderServer")
+            import PlutoSliderServer
+            PlutoSliderServer.github_action(".";
+                Export_cache_dir="pluto_state_cache",
+                Export_baked_notebookfile=false,
+                Export_baked_state=false,
+            )'
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: notebooks
+          force_orphan: true
