--- a/.github/workflows/ExportNotebooks.yml
+++ b/.github/workflows/ExportNotebooks.yml
@@ -3,7 +3,9 @@ on:
     push:
         branches:
             - main
-            
+    pull_request:
+        branches:
+            - main
     workflow_dispatch:
 
 # When two jobs run in parallel, cancel the older ones, to make sure that the website is generated from the most recent commit.
@@ -11,22 +13,19 @@ concurrency:
     group: pluto-export
     cancel-in-progress: true
 
-# This action needs permission to write the exported HTML file to the gh-pages branch.
-permissions:
-    contents: write
-    # (all other permission fields default to "none")
-
 jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
+        env:
+            PYTHON: ''
         steps:
             - name: Checkout this repository
-              uses: actions/checkout@v3
+              uses: actions/checkout@v2
 
             - name: Install Julia
               uses: julia-actions/setup-julia@v1
               with:
-                  version: "1" # This will automatically pick the latest Julia version
+                  version: 1.8.4
 
             - name: Cache Julia artifacts & such
               uses: julia-actions/cache@v1
@@ -35,7 +34,7 @@ jobs:
 
             # We set up a folder that Pluto can use to cache exported notebooks. If the notebook file did not change, then Pluto can take the exported file from cache instead of running the notebook.
             - name: Set up notebook state cache
-              uses: actions/cache@v3
+              uses: actions/cache@v2
               with:
                   path: pluto_state_cache
                   key: ${{ runner.os }}-pluto_state_cache-v2-${{ hashFiles('**/Project.toml', '**/Manifest.toml', '.github/workflows/*' ) }}-${{ hashFiles('**/*jl') }}
@@ -53,12 +52,12 @@ jobs:
                     Export_cache_dir="pluto_state_cache",
                     Export_baked_notebookfile=false,
                     Export_baked_state=false,
-                    # more parameters can go here
-                  )'
+                  )
+                  
+                  PlutoSliderServer.export_notebook("index.jl")'
             - name: Deploy to gh-pages
-              uses: JamesIves/github-pages-deploy-action@releases/v4
+              uses: JamesIves/github-pages-deploy-action@releases/v3
               with:
-                  token: ${{ secrets.GITHUB_TOKEN }}
-                  branch: gh-pages
-                  folder: .
-                  single-commit: true
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  BRANCH: gh-pages
+                  FOLDER: .
