--- a/.github/workflows/ExportNotebooks.yml
+++ b/.github/workflows/ExportNotebooks.yml
@@ -3,34 +3,22 @@ on:
     push:
         branches:
             - main
-    pull_request:
-        branches:
-            - main
+            # - master
     workflow_dispatch:
-
-# When two jobs run in parallel, cancel the older ones, to make sure that the website is generated from the most recent commit.
-concurrency:
-    group: pluto-export
-    cancel-in-progress: true
 
 jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
-        env:
-            PYTHON: ''
         steps:
-            - name: Checkout this repository
+            - name: Checkout
               uses: actions/checkout@v2
+
 
             - name: Install Julia
               uses: julia-actions/setup-julia@v1
               with:
-                  version: 1.8.4
+                  version: 1.8
 
-            - name: Cache Julia artifacts & such
-              uses: julia-actions/cache@v1
-              with:
-                cache-registries: "true"
 
             # We set up a folder that Pluto can use to cache exported notebooks. If the notebook file did not change, then Pluto can take the exported file from cache instead of running the notebook.
             - name: Set up notebook state cache
@@ -41,20 +29,19 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-pluto_state_cache-v2-${{ hashFiles('**/Project.toml', '**/Manifest.toml', '.github/workflows/*' ) }}
             - name: Run & export Pluto notebooks
-              run: |
-                julia -e 'using Pkg
-                  Pkg.activate(mktempdir())
+              run: julia -e 'using Pkg;
+                  Pkg.activate(mktempdir());
                   Pkg.add([
-                    Pkg.PackageSpec(name="PlutoSliderServer", version="0.3.2-0.3"),
-                  ])
-                  import PlutoSliderServer
-                  PlutoSliderServer.github_action(".";
+                    Pkg.PackageSpec(name="PlutoSliderServer", version="0.3.15-0.3"),
+                  ]);
+
+                  import PlutoSliderServer;
+
+                  PlutoSliderServer.github_action(;
                     Export_cache_dir="pluto_state_cache",
-                    Export_baked_notebookfile=false,
-                    Export_baked_state=false,
-                  )
-                  
-                  PlutoSliderServer.export_notebook("index.jl")'
+                  );'
+
+
             - name: Deploy to gh-pages
               uses: JamesIves/github-pages-deploy-action@releases/v3
               with:
